# mathlab

./: .gitignore  CMakeLists.txt  build.py  conanfile.py  license  readme.md
cmake/: Findmathlab.cmake  mathlabConfig.cmake.in
include/mathlab/core/: core.h  core_define.h
include/mathlab/rand/: rand.h
modules/: CMakeLists.txt
modules/core/: core.h
modules/rand/: rand.cpp  rand.h
plugin/: filesystem.py  logging_ex.py  subprocess_ex.py
src/rand/: rand.cpp
test/: CMakeLists.txt  build.py  conanfile.txt  rand_test.cpp
tool/: CMakeLists.txt  build.py  conanfile.txt  help.cpp
